@@ -33,7 +33,7 @@ public enum SubSkillType {
     /* Fishing */
     FISHING_FISHERMANS_DIET(5),
     FISHING_ICE_FISHING(1),
-    FISHING_MAGIC_HUNTER,
+    FISHING_MAGIC_HUNTER(1),
     FISHING_MASTER_ANGLER(1),
     FISHING_TREASURE_HUNTER(8),
     FISHING_SHAKE(1),
